Format vertical 9:16, subtitrari ASS cu cuvant evidentiat, font
